--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Répertoire git pour le tp du cours git de la plateforme Elephorm",
   "main": "server.js",
   "scripts": {
-    "watchify": "./node_modules/watchify/bin/cmd.js -r ./converter/markdown.js:markdown -o public/bundle.js",
+    "watchify": " markdown:markdown -o bundle",
     "browserify": "./node_modules/browserify/bin/cmd.js -r ./converter/markdown.js:markdown > public/bundle.js",
-    "nodemon": "./node_modules/nodemon/bin/nodemon.js",
-    "dev": "npm run watchify & npm run nodemon",
+    "nodemon": "nodemon",
+    "dev": "npm run nodemon",
     "test": "./node_modules/mocha/bin/mocha converter/tests/markdown-test.js"
   },
   "repository": {
